--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "HackerWeb",
-  "short_name": "HackerWeb",
+  "name": "paradaMia",
+  "short_name": "paradaMia",
+  "theme_color": "#RRGGBB",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#fff",
